--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./portfolio.css">
 </head>
-<body>
+<body class="open-sns-normal">
+    <header class="header">
+        <nav>
+            <h3 class="titel">Ma<span class="titel1">r</span>y</h3>
+            <ul>
+                <li><a class="dark2-primary" href="">Portfolio</a></li>
+                <li><a class="dark2-primary" href="">Blog</a></li>
+                <li><a class="dark2-primary" href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner1">
+                <h3 class="banner2 dark2-primary">Hi, I  am</h3>
+                <h1 class="banner3">Mary Hardy</h1>
+                <p class="banner4">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner5" src="images/hardy.png" alt="">
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
