--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./portfolio.css">
 </head>
 <body class="open-sns-normal">
-    <header class="header">
+    <header class="header dackcl">
         <nav>
             <h3 class="titel">Ma<span class="titel1">r</span>y</h3>
             <ul>
@@ -30,7 +30,59 @@
             <img class="banner5" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about dackcl">
+            <div class="auto">
+                <h3 class="txt-size mar">About Me</h3>
+            <p class="d3">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="auto3">
+                <div class="auto4">
+                    <p class="auto5">Name:</p>
+                    <p class="auto6">Mary Hardy</p>
+                </div>
+                <div class="auto4">
+                    <p class="auto5">Email:</p>
+                    <p class="auto6">info@gmail.com</p>
+                </div>
+                <div class="auto4">
+                    <p class="auto5">Date of birth:</p>
+                    <p class="auto6">11 November 1987</p>
+                </div>
+                <div class="auto4">
+                    <p class="auto5">From:</p>
+                    <p class="auto6">Los Angeles, USA</p>
+                </div>
+            </div>
+            </div>
+        </section>
+         <section class="skill">
+            <h3 class="skill1">What I do</h3>
+            <p class="skill2">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill3">
+                <div class="skill4">
+                    <img src="images/icons/js.png" alt="" class="skill5">
+                    <h3 class="skill6">Vanilla JavaScript</h3>
+                    <p class="skill7">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill4">
+                    <img src="images/icons/react.png" alt="" class="skill5">
+                    <h3 class="skill6">React</h3>
+                    <p class="skill7">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill4">
+                    <img src="images/icons/nodejs.png" alt="" class="skill5">
+                    <h3 class="skill6">Node.js</h3>
+                    <p class="skill7">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill4">
+                    <img src="images/icons/mongo.png" alt="" class="skill5">
+                    <h3 class="skill6">MongoDB</h3>
+                    <p class="skill7">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+         </section>
+    </main>
     <footer></footer>
     
 </body>
