--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="open-sns-normal">
     <header class="header dackcl">
@@ -24,8 +25,8 @@
                 <h3 class="banner2 dark2-primary">Hi, I  am</h3>
                 <h1 class="banner3">Mary Hardy</h1>
                 <p class="banner4">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner5" src="images/hardy.png" alt="">
         </div>
@@ -81,6 +82,58 @@
                 </div>
             </div>
 
+         </section>
+         <h3 class="ccl">A summary of My Resume</h3>
+         <section>
+            <div class="res1">
+                <div class="res2">
+                    <h3 class="res3">My Education</h3>
+                    <div class="res5">
+                        <h4 class="res6">Master in Computer Engineering</h4>
+                        <h5 class="res7">Harvard University / 2015 - 2017</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="res5">
+                        <h4 class="res6">Master in Computer Engineering</h4>
+                        <h5 class="res7">Harvard University / 2015 - 2017</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="res5">
+                        <h4 class="res6">Master in Computer Engineering</h4>
+                        <h5 class="res7">Harvard University / 2015 - 2017</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="res2">
+                    <h3 class="res3">My Experience</h3>
+                    <div class="res5">
+                        <h4 class="res6">Sr. Font End Developer</h4>
+                        <h5 class="res7">Apple Inc / 2020 - Current</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="res5">
+                        <h4 class="res6">Jr. Font End Developer</h4>
+                        <h5 class="res7">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="res5">
+                        <h4 class="res6">HTML Developer</h4>
+                        <h5 class="res7">Adobe Inc / 2017 - 2018</h5>
+                        <p class="res8">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="res9 "><button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button></div>
          </section>
     </main>
     <footer></footer>
