--- a/index.html
+++ b/index.html
@@ -136,7 +136,28 @@
             <div class="res9 "><button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button></div>
          </section>
     </main>
-    <footer></footer>
+    <footer class="dackcl">
+        <section class="sep footer-c">
+            <div class="last">
+                <h3 class="txt-size">Lets Connect</h3>
+                <p class="last2">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="last3">
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                </div>
+            </div>
+            <div class="last">
+                <h3 class="txt-size">Let’s Message me</h3>
+                <form>
+                    <input class="bt" type="text" placeholder="Your name">
+                    <input class="bt marg" type="email" name="" id="" placeholder="Your email">
+                    <textarea class="btt marg" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <div><button class="btn-primary marg">Submit</button></div>
+                </form>
+            </div>    
+        </section>
+    </footer>
     
 </body>
 </html>
